# litlab

./: .gitignore  README.md  pyproject.toml
experiments/: vae_s.ipynb
papers/pca/: main.ipynb  pca_scratch.py
